tests/baselines/reference/exportAssignmentWithPrivacyError(strict=true).errors.txt
exportAssignmentWithPrivacyError.ts(2,6): error TS7006: Parameter 'res' implicitly has an 'any' type.
exportAssignmentWithPrivacyError.ts(2,11): error TS7006: Parameter 'req' implicitly has an 'any' type.
exportAssignmentWithPrivacyError.ts(2,16): error TS7006: Parameter 'next' implicitly has an 'any' type.
exportAssignmentWithPrivacyError.ts(15,10): error TS2454: Variable 'server' is used before being assigned.


==== exportAssignmentWithPrivacyError.ts (4 errors) ====
    interface connectmodule {
        (res, req, next): void;
         ~~~
!!! error TS7006: Parameter 'res' implicitly has an 'any' type.
              ~~~
!!! error TS7006: Parameter 'req' implicitly has an 'any' type.
                   ~~~~
!!! error TS7006: Parameter 'next' implicitly has an 'any' type.
    }
    interface connectexport {
        use: (mod: connectmodule) => connectexport;
        listen: (port: number) => void;
    }
    
    var server: {
        (): connectexport;
        test1: connectmodule;
        test2(): connectmodule;
    };
    
    export = server;
             ~~~~~~
!!! error TS2454: Variable 'server' is used before being assigned.
    
    